# smartmeter-datacollector-configurator

./: LICENSE  README.md
.github/workflows/: backend-code-checks.yml  build-deb.yml  frontend-code-checks.yml  publish-to-pypi.yml
backend/: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py  smartmeter-datacollector-configurator.service
backend/debian/: changelog  control  postinst  python3-smartmeter-datacollector-configurator.service  rules
backend/debian-tmpl/: changelog  control  copyright  package.install  postinst  prerm  rules
backend/scripts/: build.sh  build_deb.sh  build_py.sh  build_shiv.sh  build_srcdeb.sh  debianize.sh  smartmeter-datacollector-configurator
backend/smartmeter_datacollector_configurator/: __main__.py  app.py  authentication.py  configurator.py  dto.py  system.py  validation.py
backend/tests/: test_authentication.py  test_configurator.py  test_dto.py
frontend/smartmeter-datacollector-configurator/: README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/smartmeter-datacollector-configurator/src/: App.vue  api.js  main.js  utils.js
frontend/smartmeter-datacollector-configurator/src/components/: Configurator.vue  LoggerSink.vue  MqttSink.vue  PasswordModal.vue  SmartMeter.vue
