[tool.poetry]
name = "smartmeter-datacollector-configurator"
version = "1.2.0"
description = "Smart Meter Data Collector Configurator"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
maintainers = ["Supercomputing Systems AG <info@scs.ch>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/scs/smartmeter-datacollector-configurator"
repository = "https://github.com/scs/smartmeter-datacollector-configurator"
documentation = "https://github.com/scs/smartmeter-datacollector/wiki"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/scs/smartmeter-datacollector-configurator/issues"
"Pull Requests" = "https://github.com/scs/smartmeter-datacollector-configurator/pulls"
"SCS" = "https://www.scs.ch"

[tool.poetry.scripts]
smartmeter-datacollector-configurator = 'smartmeter_datacollector_configurator.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
starlette = "~=0.37.2"
uvicorn = "~=0.29.0"
pydantic = "~=1.10.7"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
isort = "*"
licenseheaders = "*"
poethepoet = "*"
pylint = "*"
pytest = "*"
shiv = "^1.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
build_py = "bash ./scripts/build_py.sh"
build_shiv = "bash ./scripts/build_shiv.sh"
build_deb = "bash ./scripts/build_deb.sh"
build_srcdeb = "bash ./scripts/build_deb.sh source"
clean = "rm -rf build dist deb_dist .pytest_cache static"
debianize = "bash ./scripts/debianize.sh"
format = "autopep8 --in-place  -r --aggressive smartmeter_datacollector_configurator/"
format_check = "autopep8 --diff -r --aggressive smartmeter_datacollector_configurator/"
isort = "isort ."
isort_check = "isort --check ."
lint = "pylint smartmeter_datacollector_configurator/"
lint_check = "pylint smartmeter_datacollector_configurator/ --exit-zero"
test = "pytest"

[tool.autopep8]
max_line_length = 120

[tool.isort]
line_length = 120

[tool.pylint.MASTER]
init-hook='import sys; sys.path.append("./smartmeter_datacollector_configurator")'
extension-pkg-whitelist='pydantic'

[tool.pylint.FORMAT]
max-line-length=120

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring"
]

[tool.pylint.SIMILARITIES]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
