[project]
name = "smartmeter-datacollector-configurator"
version = "1.3.0"
description = "Smart Meter Data Collector Configurator"
authors = [{ name = "Supercomputing Systems AG", email = "info@scs.ch" }]
maintainers = [{ name = "Supercomputing Systems AG", email = "info@scs.ch" }]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (~=2.13)",
    "starlette (~=0.37)",
    "uvicorn (~=0.29)",
]

[project.urls]
homepage = "https://github.com/scs/smartmeter-datacollector-configurator"
repository = "https://github.com/scs/smartmeter-datacollector-configurator"
documentation = "https://github.com/scs/smartmeter-datacollector/wiki"
"Bug Reports" = "https://github.com/scs/smartmeter-datacollector-configurator/issues"
"Pull Requests" = "https://github.com/scs/smartmeter-datacollector-configurator/pulls"
"SCS" = "https://www.scs.ch"

[project.scripts]
smartmeter-datacollector-configurator = 'smartmeter_datacollector_configurator.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
isort = "*"
poethepoet = "*"
pylint = "*"
pytest = "*"
shiv = "~=1.0.8"

[tool.poetry]
include = [
    { path = "smartmeter_datacollector_configurator/static/*", format = ["sdist", "wheel"] },
    { path = "smartmeter_datacollector_configurator/static/*/*", format = ["sdist", "wheel"] },
]

[tool.poe.tasks]
build_py = "bash ./scripts/build_py.sh"
build_shiv = "bash ./scripts/build_shiv.sh"
build_deb = "bash ./scripts/build_deb.sh"
build_srcdeb = "bash ./scripts/build_deb.sh source"
clean = "rm -rf build dist deb_dist .pytest_cache smartmeter_datacollector_configurator/static"
debianize = "bash ./scripts/debianize.sh"
format = "autopep8 --in-place  -r --aggressive smartmeter_datacollector_configurator/"
format_check = "autopep8 --diff -r --aggressive smartmeter_datacollector_configurator/"
isort = "isort ."
isort_check = "isort --check ."
lint = "pylint smartmeter_datacollector_configurator/"
lint_check = "pylint smartmeter_datacollector_configurator/ --exit-zero"
test = "pytest"

[tool.autopep8]
max_line_length = 120

[tool.isort]
line_length = 120

[tool.pylint.MASTER]
init-hook='import sys; sys.path.append("./smartmeter_datacollector_configurator")'
extension-pkg-whitelist='pydantic'

[tool.pylint.FORMAT]
max-line-length=120

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring"
]

[tool.pylint.SIMILARITIES]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
